[merged-ref] Updates build and types

--- a/packages/merged-ref/tsconfig.json
+++ b/packages/merged-ref/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src"],
-  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx", "**/__snapshots__/**"],
   "compilerOptions": {
     "target": "es5",
     "lib": ["esnext", "dom", "dom.iterable"],
