--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/switch",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/switch#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -126,7 +126,9 @@
     "react-test-renderer": "latest",
     "typescript": "latest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@react-hook/change": "^1.0.0"
+  },
   "peerDependencies": {
     "react": ">=16.8"
   }
