--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -124,7 +124,7 @@
     "husky": "latest",
     "jest": "latest",
     "lint-staged": "latest",
-    "lundle": "latest",
+    "lundle": "^0.4.9",
     "prettier": "latest",
     "react": "latest",
     "react-dom": "latest",
