--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -120,7 +120,7 @@
     "husky": "latest",
     "jest": "latest",
     "lint-staged": "latest",
-    "lundle": "latest",
+    "lundle": "^0.4.9",
     "prettier": "latest",
     "react": "latest",
     "react-dom": "latest",
