[resize-observer] add raf-schd

--- a/packages/resize-observer/package.json
+++ b/packages/resize-observer/package.json
@@ -128,6 +128,8 @@
   "dependencies": {
     "@react-hook/latest": "^1.0.2",
     "@react-hook/passive-layout-effect": "^1.2.0",
+    "@types/raf-schd": "^4.0.0",
+    "raf-schd": "^4.0.2",
     "resize-observer-polyfill": "^1.5.1"
   },
   "peerDependencies": {
