[resize-observer] replace unmaintained resize-observer-polyfill with @juggle/resize-observer

--- a/packages/resize-observer/package.json
+++ b/packages/resize-observer/package.json
@@ -126,11 +126,11 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
     "@react-hook/latest": "^1.0.2",
     "@react-hook/passive-layout-effect": "^1.2.0",
     "@types/raf-schd": "^4.0.0",
-    "raf-schd": "^4.0.2",
-    "resize-observer-polyfill": "^1.5.1"
+    "raf-schd": "^4.0.2"
   },
   "peerDependencies": {
     "react": ">=16.8"
