fix: async and latest package browser export in cjs

--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -35,7 +35,11 @@
   ],
   "exports": {
     ".": {
-      "browser": "./dist/module/index.js",
+
+      "browser": {
+        "import": "./dist/module/index.js",
+        "require": "./dist/main/index.js"
+      },
       "import": "./dist/esm/index.mjs",
       "require": "./dist/main/index.js",
       "umd": "./dist/umd/use-async.js",
